k8s/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
        - name: payment
          image: smith1984/svc_payment:0.0.1
          ports:
            - name: web
              containerPort: 8081
          livenessProbe:
            httpGet:
              port: 8081
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8081
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: "/app/resources/application.yaml"
              subPath: "application.yaml"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config-application-payment
