k8s/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-app
  ports:
    - port: 80
      name: http
      targetPort: web
  type: ClusterIP
